@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
-<!--Generated with glade3 3.4.5 on Thu Sep 11 10:22:25 2008 -->
 <interface>
+  <!-- interface-requires gtk+ 2.12 -->
+  <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkWindow" id="horizontal">
     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
     <property name="title" translatable="yes">Click Type Window</property>
@@ -13,12 +14,19 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
-            <property name="tooltip-text" translatable="yes">Enable dwell click</property>
-            <property name="label" translatable="yes">On</property>
+            <property name="tooltip_text" translatable="yes">Enable dwell click</property>
+            <child>
+              <object class="GtkImage" id="image1">
+                <property name="visible">True</property>
+                <property name="stock">gtk-yes</property>
+                <property name="icon-size">4</property>
+              </object>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
             <property name="fill">False</property>
+            <property name="position">0</property>
           </packing>
         </child>
         <child>
@@ -38,37 +46,46 @@
             <child>
               <object class="GtkRadioButton" id="single_click">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="receives_default">False</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="tooltip-text" translatable="yes">Single Click</property>
-                <property name="relief">GTK_RELIEF_NONE</property>
+                <property name="tooltip_text" translatable="yes">Single Click</property>
+                <property name="relief">none</property>
                 <property name="focus_on_click">False</property>
-                <property name="image_position">GTK_POS_TOP</property>
+                <property name="image_position">top</property>
                 <property name="active">True</property>
+                <property name="draw_indicator">False</property>
                 <child>
                   <object class="GtkImage" id="single_click_img">
                     <property name="visible">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="stock">gtk-missing-image</property>
-                    <property name="icon_size">5</property>
+                    <property name="icon-size">5</property>
                   </object>
                 </child>
               </object>
+              <packing>
+                <property name="position">0</property>
+              </packing>
             </child>
             <child>
               <object class="GtkRadioButton" id="double_click">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="receives_default">False</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="tooltip-text" translatable="yes">Double Click</property>
-                <property name="relief">GTK_RELIEF_NONE</property>
+                <property name="tooltip_text" translatable="yes">Double Click</property>
+                <property name="relief">none</property>
                 <property name="focus_on_click">False</property>
-                <property name="image_position">GTK_POS_TOP</property>
+                <property name="image_position">top</property>
+                <property name="draw_indicator">False</property>
                 <property name="group">single_click</property>
                 <child>
                   <object class="GtkImage" id="double_click_img">
                     <property name="visible">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="stock">gtk-missing-image</property>
-                    <property name="icon_size">5</property>
+                    <property name="icon-size">5</property>
                   </object>
                 </child>
               </object>
@@ -79,18 +96,21 @@
             <child>
               <object class="GtkRadioButton" id="drag_click">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="receives_default">False</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="tooltip-text" translatable="yes">Drag Click</property>
-                <property name="relief">GTK_RELIEF_NONE</property>
+                <property name="tooltip_text" translatable="yes">Drag Click</property>
+                <property name="relief">none</property>
                 <property name="focus_on_click">False</property>
-                <property name="image_position">GTK_POS_TOP</property>
+                <property name="image_position">top</property>
+                <property name="draw_indicator">False</property>
                 <property name="group">single_click</property>
                 <child>
                   <object class="GtkImage" id="drag_click_img">
                     <property name="visible">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="stock">gtk-missing-image</property>
-                    <property name="icon_size">5</property>
+                    <property name="icon-size">5</property>
                   </object>
                 </child>
               </object>
@@ -101,18 +121,21 @@
             <child>
               <object class="GtkRadioButton" id="right_click">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="receives_default">False</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="tooltip-text" translatable="yes">Right Click</property>
-                <property name="relief">GTK_RELIEF_NONE</property>
+                <property name="tooltip_text" translatable="yes">Right Click</property>
+                <property name="relief">none</property>
                 <property name="focus_on_click">False</property>
-                <property name="image_position">GTK_POS_TOP</property>
+                <property name="image_position">top</property>
+                <property name="draw_indicator">False</property>
                 <property name="group">single_click</property>
                 <child>
                   <object class="GtkImage" id="right_click_img">
                     <property name="visible">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="stock">gtk-missing-image</property>
-                    <property name="icon_size">5</property>
+                    <property name="icon-size">5</property>
                   </object>
                 </child>
               </object>
@@ -140,12 +163,19 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
-            <property name="tooltip-text" translatable="yes">Enable dwell click</property>
-            <property name="label" translatable="yes">On</property>
+            <property name="tooltip_text" translatable="yes">Enable dwell click</property>
+            <child>
+              <object class="GtkImage" id="image1">
+                <property name="visible">True</property>
+                <property name="stock">gtk-yes</property>
+                <property name="icon-size">4</property>
+              </object>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
             <property name="fill">False</property>
+            <property name="position">0</property>
           </packing>
         </child>
         <child>
@@ -164,37 +194,46 @@
             <child>
               <object class="GtkRadioButton" id="single_click_v">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="receives_default">False</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="tooltip-text" translatable="yes">Single Click</property>
-                <property name="relief">GTK_RELIEF_NONE</property>
+                <property name="tooltip_text" translatable="yes">Single Click</property>
+                <property name="relief">none</property>
                 <property name="focus_on_click">False</property>
-                <property name="image_position">GTK_POS_TOP</property>
+                <property name="image_position">top</property>
                 <property name="active">True</property>
+                <property name="draw_indicator">False</property>
                 <child>
                   <object class="GtkImage" id="single_click_img_v">
                     <property name="visible">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="stock">gtk-missing-image</property>
-                    <property name="icon_size">5</property>
+                    <property name="icon-size">5</property>
                   </object>
                 </child>
               </object>
+              <packing>
+                <property name="position">0</property>
+              </packing>
             </child>
             <child>
               <object class="GtkRadioButton" id="double_click_v">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="receives_default">False</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="tooltip-text" translatable="yes">Double Click</property>
-                <property name="relief">GTK_RELIEF_NONE</property>
+                <property name="tooltip_text" translatable="yes">Double Click</property>
+                <property name="relief">none</property>
                 <property name="focus_on_click">False</property>
-                <property name="image_position">GTK_POS_TOP</property>
+                <property name="image_position">top</property>
+                <property name="draw_indicator">False</property>
                 <property name="group">single_click_v</property>
                 <child>
                   <object class="GtkImage" id="double_click_img_v">
                     <property name="visible">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="stock">gtk-missing-image</property>
-                    <property name="icon_size">5</property>
+                    <property name="icon-size">5</property>
                   </object>
                 </child>
               </object>
@@ -205,18 +244,21 @@
             <child>
               <object class="GtkRadioButton" id="drag_click_v">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="receives_default">False</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="tooltip-text" translatable="yes">Drag Click</property>
-                <property name="relief">GTK_RELIEF_NONE</property>
+                <property name="tooltip_text" translatable="yes">Drag Click</property>
+                <property name="relief">none</property>
                 <property name="focus_on_click">False</property>
-                <property name="image_position">GTK_POS_TOP</property>
+                <property name="image_position">top</property>
+                <property name="draw_indicator">False</property>
                 <property name="group">single_click_v</property>
                 <child>
                   <object class="GtkImage" id="drag_click_img_v">
                     <property name="visible">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="stock">gtk-missing-image</property>
-                    <property name="icon_size">5</property>
+                    <property name="icon-size">5</property>
                   </object>
                 </child>
               </object>
@@ -227,18 +269,21 @@
             <child>
               <object class="GtkRadioButton" id="right_click_v">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="receives_default">False</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="tooltip-text" translatable="yes">Right Click</property>
-                <property name="relief">GTK_RELIEF_NONE</property>
+                <property name="tooltip_text" translatable="yes">Right Click</property>
+                <property name="relief">none</property>
                 <property name="focus_on_click">False</property>
-                <property name="image_position">GTK_POS_TOP</property>
+                <property name="image_position">top</property>
+                <property name="draw_indicator">False</property>
                 <property name="group">single_click_v</property>
                 <child>
                   <object class="GtkImage" id="right_click_img_v">
                     <property name="visible">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <property name="stock">gtk-missing-image</property>
-                    <property name="icon_size">5</property>
+                    <property name="icon-size">5</property>
                   </object>
                 </child>
               </object>
@@ -260,9 +305,9 @@
     <property name="border_width">5</property>
     <property name="title">Info zu</property>
     <property name="resizable">False</property>
-    <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
-    <property name="icon_name">gnome-dev-mouse-optical</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
+    <property name="window_position">center-on-parent</property>
+    <property name="icon_name">input-mouse</property>
+    <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
     <property name="copyright">Copyright 2007-2008 &#xA9; Gerd Kohlberger</property>
     <property name="comments" translatable="yes">Applet to select different dwell-click types.
@@ -270,7 +315,7 @@ Part of Mousetweaks</property>
     <property name="authors">Gerd Kohlberger &lt;lowfi@chello.at&gt;</property>
     <property name="documenters">Francesco Fumanti &lt;francesco.fumanti@gmx.net&gt;</property>
     <property name="translator_credits">GNOME Translation Team</property>
-    <property name="logo_icon_name">gnome-dev-mouse-optical</property>
+    <property name="logo_icon_name">input-mouse</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox1">
         <property name="visible">True</property>
@@ -283,11 +328,12 @@ Part of Mousetweaks</property>
           <object class="GtkHButtonBox" id="dialog-action_area1">
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">end</property>
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
           </packing>
         </child>
       </object>
